--- a/fretboard/styles.css
+++ b/fretboard/styles.css
@@ -1,4 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100,300,400");
+:root {
+  --fretboard-height: 300;
+  --number-of-strings: 6;
+  --string-height: 10;
+  --string-top-position: calc(
+    var(--fretboard-height) / var(--number-of-strings) / 2
+  );
+}
 
 * {
   margin: 0;
@@ -7,7 +14,7 @@
 
 body {
   background: #353535;
-  font-family: Lato, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .fretboard {
@@ -15,7 +22,7 @@ body {
   flex-direction: column;
   background: #be975b;
   width: 100%;
-  height: 300px;
+  height: calc(var(--fretboard-height) * 1px);
   margin-top: 50px;
 }
 
@@ -29,12 +36,12 @@ body {
 .string:before {
   content: "";
   width: 100%;
-  height: 10px;
+  height: calc(var(--string-height) * 1px);
   background: linear-gradient(#eee, #999);
   box-shadow: 75px 3px 10px #806233;
   z-index: 1;
   position: absolute;
-  top: 20px;
+  top: calc(var(--string-top-position) * 1px);
 }
 
 .note-fret {
@@ -66,5 +73,38 @@ body {
   background: teal;
   z-index: 2;
   color: #eee;
-  opacity: 0.5;
+  opacity: 0;
+}
+
+.single-fretmark:after {
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #806233;
+  top: 150px;
+  transform: translate(0, -50%);
+}
+
+.double-fretmark:before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+  background: #806233;
+  top: 60px;
+  transition: translate(-140%, 50%);
+}
+
+.double-fretmark:after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+  background: #806233;
+  top: 100px;
+  transition: translate(-140%, 50%);
 }
