added more content

--- a/fretboard/styles.css
+++ b/fretboard/styles.css
@@ -35,6 +35,15 @@ body {
   margin-left: 20px;
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  opacity: 1;
+}
+
+label {
+  margin: 0 10px;
+}
+
 .fretboard {
   min-width: 1500px;
   display: flex;
